explore the data

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -924,6 +924,125 @@
    "source": [
     "data_nona.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explore the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for DDoS attacks\n",
+    "ddos_df = data_nona[data_nona['Label'] == 'DDoS']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Destination Port  Flow Duration  Total Fwd Packets  \\\n",
+      "count           34952.0   3.495200e+04       34952.000000   \n",
+      "mean               80.0   1.370784e+07           4.317550   \n",
+      "std                 0.0   2.561829e+07           1.834958   \n",
+      "min                80.0   0.000000e+00           1.000000   \n",
+      "25%                80.0   5.786868e+05           3.000000   \n",
+      "50%                80.0   1.701951e+06           4.000000   \n",
+      "75%                80.0   8.379818e+06           5.000000   \n",
+      "max                80.0   8.137270e+07          10.000000   \n",
+      "\n",
+      "       Total Backward Packets  Total Length of Fwd Packets  \\\n",
+      "count            34952.000000                 34952.000000   \n",
+      "mean                 3.345989                    31.113870   \n",
+      "std                  2.538891                    11.401108   \n",
+      "min                  0.000000                     6.000000   \n",
+      "25%                  0.000000                    26.000000   \n",
+      "50%                  4.000000                    26.000000   \n",
+      "75%                  5.000000                    30.000000   \n",
+      "max                  8.000000                    68.000000   \n",
+      "\n",
+      "       Total Length of Bwd Packets  Fwd Packet Length Max  \\\n",
+      "count                 34952.000000           34952.000000   \n",
+      "mean                   7558.860151              15.118906   \n",
+      "std                    5529.375098               6.671695   \n",
+      "min                       0.000000               6.000000   \n",
+      "25%                       0.000000               6.000000   \n",
+      "50%                   11601.000000              20.000000   \n",
+      "75%                   11607.000000              20.000000   \n",
+      "max                   11607.000000              20.000000   \n",
+      "\n",
+      "       Fwd Packet Length Min  Fwd Packet Length Mean  Fwd Packet Length Std  \\\n",
+      "count           34952.000000            34952.000000           34952.000000   \n",
+      "mean                2.090009                7.488924               6.003799   \n",
+      "std                 2.858697                1.251449               4.709538   \n",
+      "min                 0.000000                3.000000               0.000000   \n",
+      "25%                 0.000000                6.000000               0.000000   \n",
+      "50%                 0.000000                7.000000               5.656854   \n",
+      "75%                 6.000000                8.666667              10.263203   \n",
+      "max                 6.000000               10.000000              14.142136   \n",
+      "\n",
+      "       ...  act_data_pkt_fwd  min_seg_size_forward   Active Mean  Active Std  \\\n",
+      "count  ...      34952.000000               34952.0  3.495200e+04     34952.0   \n",
+      "mean   ...          3.159876                  20.0  1.748034e+05         0.0   \n",
+      "std    ...          1.514416                   0.0  7.469998e+05         0.0   \n",
+      "min    ...          0.000000                  20.0  0.000000e+00         0.0   \n",
+      "25%    ...          2.000000                  20.0  0.000000e+00         0.0   \n",
+      "50%    ...          3.000000                  20.0  0.000000e+00         0.0   \n",
+      "75%    ...          4.000000                  20.0  1.001000e+03         0.0   \n",
+      "max    ...          8.000000                  20.0  5.000895e+06         0.0   \n",
+      "\n",
+      "         Active Max    Active Min     Idle Mean      Idle Std      Idle Max  \\\n",
+      "count  3.495200e+04  3.495200e+04  3.495200e+04  3.495200e+04  3.495200e+04   \n",
+      "mean   1.748034e+05  1.748034e+05  9.599988e+06  3.394707e+06  1.200052e+07   \n",
+      "std    7.469998e+05  7.469998e+05  1.923094e+07  1.116669e+07  2.369618e+07   \n",
+      "min    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+      "25%    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+      "50%    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+      "75%    1.001000e+03  1.001000e+03  8.372436e+06  0.000000e+00  8.372436e+06   \n",
+      "max    5.000895e+06  5.000895e+06  8.140000e+07  4.670000e+07  8.140000e+07   \n",
+      "\n",
+      "           Idle Min  \n",
+      "count  3.495200e+04  \n",
+      "mean   7.199728e+06  \n",
+      "std    1.740277e+07  \n",
+      "min    0.000000e+00  \n",
+      "25%    0.000000e+00  \n",
+      "50%    0.000000e+00  \n",
+      "75%    7.465332e+06  \n",
+      "max    8.140000e+07  \n",
+      "\n",
+      "[8 rows x 78 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get basic statistics for DDoS data\n",
+    "print(ddos_df.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Most of the DDoS attacks are targeting **port 80**, which is commonly used for HTTP traffic. This is typical because attackers often target web services.\n",
+    "2. The duration of DDoS attack flows varies greatly. A very high Flow Duration could indicate a long-lasting attack. For instance, an attack lasting 13 seconds could be a sustained attempt to overwhelm the server.\n",
+    "3. \"Forward\" means the direction from the sender (in this case,  the attacker) to the receiver (the target of the DDoS attack).\n",
+    "- *Ping Flood* Attack. The attacker attempts to overwhelm a targeted device with ICMP echo-request packets Each ping might be around 28-32 bytes.This fits our mean of 31.11 bytes.The server gets overwhelmed trying to respond to all these small messages.\n",
+    "- *SYN Flood* Attack.A type of network-based denial-of-service (DoS) attack in which an attacker overwhelms a target system by sending a large number of SYN (synchronize) requests to the target's server. \n",
+    "- *Low-and-Slow* Attack. This type of attack uses seemingly normal traffic but in a way that exhausts server resources.Packet sizes might vary more, explaining our standard deviation of 11.40 bytes.The attack is harder to detect because it mimics normal traffic patterns.\n",
+    "- *Amplification Attack* This type of attack involves larger packets, but our statistics suggest a different approach of the attacks with a maximum of 68 bytes which is still small.\n",
+    "4. \n"
+   ]
   }
  ],
  "metadata": {
