--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "Length: 79, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "array(['BENIGN', 'DDoS', nan], dtype=object)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "array(['BENIGN', 'DDoS'], dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "[8 rows x 78 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,24 +1448,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1634798933.py:12: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n"
      ]
     },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1551,30 +1551,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\1770841354.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//3, i%3].set_xticklabels(axes[i//3, i%3].get_xticklabels(), rotation=45)\n"
      ]
     },
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\3494521090.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\3494521090.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "DDoS          0.506037        0.000000             0.0         0.00000  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,31 +1828,32 @@
     "- BENIGN Traffic: Shows a balanced use of flags for normal connection management (initiation with SYN, data transfer with PSH, acknowledgments with ACK, termination with FIN).\n",
     "- DDoS traffic is characterized by an aggressive use of PSH and ACK flags, reflecting its disruptive nature. The lack of SYN, FIN, RST, and URG flags indicates a focus on overwhelming the target rather than managing connections properly.\n",
     "- A high count of PSH flags means that the attack traffic is consistently trying to push data onto the server. This floods the server’s resources and overwhelms it with data that needs immediate processing.\n",
-    "- A high count of ACK flags in DDoS traffic means the attack traffic is confirming the receipt of packets at a high rate, potentially in a way that forces the server to allocate resources to handle these acknowledgements.\n",
+    "- A high count of ACK flags in DDoS traffic means the attack traffic is confirming the receipt of packets at a high rate, potentially in a way that forces the server to allocate resources to handle these acknowledgements. In a DDoS context, it can be abused to bypass certain firewall rules. Many firewalls are configured to allow packets with ACK flags, assuming they're part of established connections.\n",
     "- The absence  of SYN flags indicates that DDoS traffic isn’t trying to establish new connections. It might be exploiting existing connections or simply sending data without the need to set up new sessions.\n",
     "- The absence of FIN flags indicates that the DDoS attack does not properly close connections. It leaves connections hanging, forcing the server to deal with these incomplete connections.\n",
     "- The absence of RST flags means the attack does not attempt to reset connections. This prevents the server from clearing out malicious connections.\n",
-    "- The absence of URG flags indicates that the attack traffic does not mark data as urgent, possibly because it aims to flood with sheer volume rather than with urgency."
+    "- The absence of URG flags indicates that the attack traffic does not mark data as urgent, possibly because it aims to flood with sheer volume rather than with urgency.\n",
+    "- This could indicate a **TCP ACK flood** or a variation of it, combined with the aggressive processing demands of the PSH flag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n",
-      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_13228\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\Eric\\AppData\\Local\\Temp\\ipykernel_9132\\2139202623.py:11: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes[i//2, i%2].set_xticklabels(axes[i//2, i%2].get_xticklabels(), rotation=45)\n"
      ]
     },
@@ -1887,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
